--- a/dmixon-business/src/styles/Navbar.css
+++ b/dmixon-business/src/styles/Navbar.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 180px;
     position: relative;
-    background-color:rgb(134, 187, 224);
+    background-color: rgb(134, 187, 224);
 }
 
 .navbar-content {
@@ -39,7 +39,12 @@
     list-style-type: none;
     margin: 0;
     padding: 10px 5px;
-    margin-top:100px;
+    margin-top: 100px;
+}
+
+.nav-link-container {
+    position: relative;
+    display: flex;
 }
 
 .nav-link {
@@ -52,8 +57,9 @@
 }
 
 .nav-link:hover {
-    color:black;
+    color: black;
 }
+
 .nav-link-contact {
     text-decoration: none;
     color: white;
@@ -67,7 +73,7 @@
 }
 
 .nav-link-contact:hover {
-    border:2px solid black;
+    border: 2px solid black;
     background-color: white;
     color: black;
 }
@@ -78,4 +84,34 @@
 
 .spacer {
     flex-grow: 1;
+}
+
+.dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #444;
+    list-style: none;
+    padding: 0.5rem 0;
+    margin: 0;
+    display: none;
+}
+
+.dropdown-item {
+    padding: 0.5rem 1rem;
+}
+
+.dropdown-link {
+    color: #fff;
+    text-decoration: none;
+    font-family: Thasadith, sans-serif;
+}
+
+.dropdown-link:hover {
+    color: black;
+}
+
+.nav-link-container:hover .dropdown,
+.nav-link-container:focus-within .dropdown {
+    display: block;
 }
