--- a/dmixon-business/src/styles/Navbar.css
+++ b/dmixon-business/src/styles/Navbar.css
@@ -90,7 +90,7 @@
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #444;
+    background-color: rgb(134, 187, 224);
     list-style: none;
     padding: 0.5rem 0;
     margin: 0;
@@ -102,7 +102,8 @@
 }
 
 .dropdown-link {
-    color: #fff;
+    color: white;
+    font: bold;
     text-decoration: none;
     font-family: Thasadith, sans-serif;
 }
