Added drop shadow to navbar title.

--- a/dmixon-business/src/styles/Navbar.css
+++ b/dmixon-business/src/styles/Navbar.css
@@ -19,6 +19,12 @@
     font-weight: 700;
     color: white;
     margin-bottom: 90px;
+    text-shadow:
+        1px 1px 0px #000,
+        2px 2px 0px #000,
+        3px 3px 0px #000,
+        4px 4px 0px #000,
+        5px 5px 0px #000;
 }
 
 .welcome-link {
