--- a/dmixon-business/src/styles/Navbar.css
+++ b/dmixon-business/src/styles/Navbar.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 180px;
     position: relative;
-    background-color: rgb(134, 187, 224);
+    background-color: rgb(97, 158, 142);
 }
 
 .navbar-content {
@@ -14,7 +14,7 @@
 
 .navbar-title {
     font-size: 55px;
-    font-family: Thasadith, sans-serif;
+    font-family: Abril Fatface, sans-serif;
     margin: 0;
     font-weight: 700;
     color: white;
