--- a/dmixon-business/src/styles/Navbar.css
+++ b/dmixon-business/src/styles/Navbar.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 180px;
     position: relative;
-    background-color: rgb(97, 158, 142);
+    background-color: rgb(97, 144, 158);
 }
 
 .navbar-content {
@@ -14,17 +14,15 @@
 
 .navbar-title {
     font-size: 55px;
-    font-family: Abril Fatface, sans-serif;
+    font-family: "Playfair Display", sans-serif;
     margin: 0;
-    font-weight: 700;
+    font-weight: 200;
     color: white;
     margin-bottom: 90px;
     text-shadow:
         1px 1px 2px #000,
         2px 2px 4px #000,
-        3px 3px 6px #000,
-        4px 4px 8px #000,
-        5px 5px 10px #000;
+        3px 3px 6px #000;
 }
 
 .welcome-link {
