--- a/dmixon-business/src/styles/People.css
+++ b/dmixon-business/src/styles/People.css
@@ -1,3 +1,10 @@
+.danielle-bio-container {
+    display: flex;
+    align-items: center;
+    padding: 40px;
+    gap: 40px;
+}
+
 .people-headshots {
     width: 260px;
     height: auto;
