Added link to People page for Danielle's bio as well as appropriate routing in the App.js file.

--- a/dmixon-business/src/styles/People.css
+++ b/dmixon-business/src/styles/People.css
@@ -11,3 +11,9 @@
     padding: 30px;
     border-radius: 70%;
 }
+
+.link-container {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
