--- a/dmixon-business/src/styles/People.css
+++ b/dmixon-business/src/styles/People.css
@@ -7,9 +7,10 @@
 
 .people-headshots {
     width: 260px;
-    height: auto;
+    height: 300px;
     padding: 30px;
-    border-radius: 70%;
+    border-radius: 50%;
+
 }
 
 .link-container {
