Removed placeholder image from Welcome page, reworked the containers on the page, and added font support.

--- a/dmixon-business/src/styles/BodyContent.css
+++ b/dmixon-business/src/styles/BodyContent.css
@@ -1,6 +1,6 @@
 .body-content {
-    background-color: rgb(97, 158, 142);
-    color: white;
+    background-color: rgb(98, 230, 195);
+    color: rgb(30, 68, 30);
     display: flex;
     height: 100vh;
 }
