--- a/dmixon-business/src/styles/Welcome.css
+++ b/dmixon-business/src/styles/Welcome.css
@@ -1,22 +1,16 @@
 .welcome-container {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    gap: 120px;
-}
-
-.welcome-image {
-    grid-column: 1;
-    padding: 60px;
-}
-
-img {
-    max-width:100%;
-    max-height: 65%;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .letter-container {
-    grid-column: 2;
     padding: 40px;
     max-width: 40%;
+    font-family: "Platypi", sans-serif;
+    font-size: x-large;
+    background-color: #559374; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
 }
