Added separate containers for segments of text to display mission statement on Welcome page.

--- a/dmixon-business/src/styles/Welcome.css
+++ b/dmixon-business/src/styles/Welcome.css
@@ -8,8 +8,9 @@
 .letter-container {
     padding: 40px;
     max-width: 40%;
+    max-height:70%;
     font-family: "Platypi", sans-serif;
-    font-size: x-large;
+    font-size:large;
     background-color: #559374; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
