--- a/dmixon-business/src/styles/Footer.css
+++ b/dmixon-business/src/styles/Footer.css
@@ -1,11 +1,7 @@
 .footer-content {
-    background-color:rgb(97, 144, 158);
-    font-family: Thasadith, sans-serif;
-    font-weight: 700;
-    color: white;
+    width: 100%;
     padding: 20px;
     text-align: center;
+    background-color: #f1f1f1;
     position: relative;
-    bottom: 0;
-    width: 100%;
 }
