--- a/dmixon-business/src/styles/Landing.css
+++ b/dmixon-business/src/styles/Landing.css
@@ -7,20 +7,21 @@
 
 .landing-header {
     font-family: "Platypi", sans-serif;
-    font-size: 42px;
-    max-width: 37%;
-    text-align: start;
-    margin-left: 30px;
-    margin-top: 75px;
+    font-size: 32px;
+    max-width: 32%;
+    text-align: center;
+    margin-left: 20px;;
+    margin-top: 20px;
     background-color: rgb(235, 233, 153);
     border-radius: 8px;
     padding: 19px;
+    border:1px solid black;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .contact-button-landing {
     margin-top: 5px;
     text-align: center;
-    margin-left: 30px;
 }
 
 .book-consult-button {
