--- a/dmixon-business/src/styles/Landing.css
+++ b/dmixon-business/src/styles/Landing.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 100%;
     padding: 20px;
+    padding-top: 90px;
 }
 
 .landing-header {
@@ -12,8 +13,8 @@
     text-align: center;
     margin-left: 20px;;
     margin-top: 20px;
-    background-color: rgb(235, 233, 153);
-    border-radius: 8px;
+    background-color: rgb(222, 233, 154);
+    border-radius: 65px;
     padding: 19px;
     border:1px solid black;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -39,7 +40,7 @@
 }
 
 .book-consult-button:hover {
-    background-color: #0056b3; /* Darken the button color on hover */
+    background-color: rgb(115, 164, 129); /* Darken the button color on hover */
 }
 
 .left {
@@ -47,10 +48,13 @@
     max-width: 40%;
     font-family: "Platypi", sans-serif;
     font-size: 22px;
-    /* background-color: rgb(235, 233, 153); */
+    background-color: rgb(178, 189, 181);
+    color: rgb(196, 157, 125);
     border-radius: 8px;
     padding: 19px;
     margin-top: 50px;
+    margin-left: 50px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .right { 
@@ -58,12 +62,17 @@
     max-width: 40%;
     font-family: "Platypi", sans-serif;
     font-size: 22px;
-    /* background-color: rgb(235, 233, 153); */
+    background-color: rgb(231, 205, 171);
     border-radius: 8px;
     padding: 19px;
     margin-top: 50px;
+    margin-right: 50px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .statement-1 {
-  
+    margin-top: 0px;
+}
+.statement-3 {
+  padding-bottom: 0px;
 }
