--- a/dmixon-business/src/styles/Navbar.css
+++ b/dmixon-business/src/styles/Navbar.css
@@ -1,8 +1,19 @@
 .navbar {
-    width: 100%;
-    height: 180px;
     position: relative;
+    top: 0;
+    width: 100%;
+    transition: all 0.3s ease-in-out;
     background-color: rgb(115, 164, 129);
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: top 0.3s ease-in-out;
 }
 
 .navbar-content {
