--- a/dmixon-business/src/styles/Landing.css
+++ b/dmixon-business/src/styles/Landing.css
@@ -1,5 +1,5 @@
 .landing-container {
-    display:flex;
+    display: flex;
     flex-direction: column;
     width: 100%;
     padding: 20px;
@@ -11,12 +11,12 @@
     font-size: 32px;
     max-width: 32%;
     text-align: center;
-    margin-left: 20px;;
+    margin-left: 20px;
     margin-top: 20px;
     background-color: rgb(222, 233, 154);
     border-radius: 65px;
     padding: 19px;
-    border:1px solid black;
+    border: 1px solid black;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -40,39 +40,50 @@
 }
 
 .book-consult-button:hover {
-    background-color: rgb(115, 164, 129); /* Darken the button color on hover */
+    background-color: rgb(115, 164, 129);
 }
 
-.left {
-    align-self: flex-start;
+.statement {
+    position: relative;
+    align-self: center;
     max-width: 40%;
     font-family: "Platypi", sans-serif;
     font-size: 22px;
+    border-radius: 8px;
+    padding: 19px;
+    margin-top: 50px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.statement.left {
     background-color: rgb(178, 189, 181);
     color: rgb(196, 157, 125);
-    border-radius: 8px;
-    padding: 19px;
-    margin-top: 50px;
-    margin-left: 50px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.right { 
-    align-self: flex-end;
-    max-width: 40%;
-    font-family: "Platypi", sans-serif;
-    font-size: 22px;
+.statement.right {
     background-color: rgb(231, 205, 171);
-    border-radius: 8px;
-    padding: 19px;
-    margin-top: 50px;
-    margin-right: 50px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+}
+
+.chain::after {
+    content: '';
+    position: absolute;
+    width: 2px;
+    height: 50px;
+    background-color: #333;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 100%;
+}
+
+.chain:last-child::after {
+    display: none;
 }
 
 .statement-1 {
     margin-top: 0px;
 }
+
 .statement-3 {
-  padding-bottom: 0px;
+    padding-bottom: 0px;
 }
