--- a/dmixon-business/src/styles/Landing.css
+++ b/dmixon-business/src/styles/Landing.css
@@ -51,13 +51,13 @@
     font-size: 22px;
     border-radius: 8px;
     padding: 19px;
-    margin-top: 50px;
+    margin-top: 90px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .statement.left {
     background-color: rgb(178, 189, 181);
-    color: rgb(196, 157, 125);
+    background-color: rgb(231, 205, 171);
 }
 
 .statement.right {
@@ -69,7 +69,7 @@
     content: '';
     position: absolute;
     width: 2px;
-    height: 50px;
+    height: 90px;
     background-color: #333;
     left: 50%;
     transform: translateX(-50%);
