--- a/dmixon-business/src/styles/Navbar.css
+++ b/dmixon-business/src/styles/Navbar.css
@@ -38,7 +38,7 @@
     font-weight: 700;
     font-size: 20px;
     padding: 10px 5px;
-    font-family: Thasadith, sans-serif;
+    font-family: "Playfair Display", sans-serif;
 }
 .welcome-link:hover {
     color: black;
@@ -61,7 +61,7 @@
 .nav-link {
     text-decoration: none;
     color: white;
-    font-family: Thasadith, sans-serif;
+    font-family: "Playfair Display", sans-serif;
     font-size: 20px;
     font-weight: 700;
     padding: 10px 5px;
@@ -74,9 +74,10 @@
 .nav-link-contact {
     text-decoration: none;
     color: white;
+    background-color: rgb(195, 150, 122);
     font-weight: 700;
     font-size: 20px;
-    font-family: Thasadith, sans-serif;
+    font-family: "Playfair Display", sans-serif;
     border: 1.5px solid white;
     padding: 10px 10px;
     border-radius: 10px;
@@ -85,7 +86,7 @@
 
 .nav-link-contact:hover {
     border: 2px solid black;
-    background-color: white;
+    background-color: rgb(222, 233, 154);
     color: black;
 }
 
