--- a/dmixon-business/src/styles/Landing.css
+++ b/dmixon-business/src/styles/Landing.css
@@ -3,21 +3,21 @@
     flex-direction: column;
     width: 100%;
     padding: 20px;
-    padding-top: 90px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .landing-header {
+    align-self: flex-start;
     font-family: "Platypi", sans-serif;
-    font-size: 32px;
-    max-width: 32%;
+    font-size: 22px;
+    max-width: 25%;
     text-align: center;
-    margin-left: 20px;
-    margin-top: 20px;
     background-color: rgb(222, 233, 154);
-    border-radius: 65px;
-    padding: 19px;
+    border-radius: 15px;
+    padding: 5px;
     border: 1px solid black;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1);
 }
 
 .contact-button-landing {
@@ -85,5 +85,5 @@
 }
 
 .statement-3 {
-    padding-bottom: 0px;
+    padding-bottom: 10px;
 }
