Incorporated original color scheme.

--- a/dmixon-business/src/styles/Footer.css
+++ b/dmixon-business/src/styles/Footer.css
@@ -2,6 +2,7 @@
     width: 100%;
     padding: 20px;
     text-align: center;
-    background-color: #f1f1f1;
+    background-color: rgb(97, 113, 158);
     position: relative;
+    color: white;
 }
