--- a/dmixon-business/src/styles/Landing.css
+++ b/dmixon-business/src/styles/Landing.css
@@ -2,9 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    padding-top: 50px;
-    padding-bottom: 50px;
     color: white;
 }
 
@@ -17,26 +14,28 @@
 
 .landing-header, .welcome-statement-container {
     flex: 1; /* Both elements take up equal space */
-    max-width: 50%; /* Ensures they do not exceed 50% of the row */
+    
 }
 
 .landing-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Distribute space evenly */
     font-family: "Platypi", sans-serif;
-    font-size: 22px;
+    font-size: 60px;
     text-align: center;
     background-color: rgb(97, 158, 142);
     border-radius: 15px;
-    margin-right: 10px; /* Space between header and statement */
-    padding: 10px;
     border: 1px solid black;
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 20px; /* Reduced padding-bottom */
+    margin-bottom: 60px;
+    position: relative; /* Necessary for absolutely positioning the arrow */
 }
 
-.welcome-statement-container {
-    font-size: 20px;
-    margin-left: 10px; /* Space between statement and header */
-    
-}
+
 
 .welcome-statement {
     font-family: "Platypi", sans-serif;
@@ -59,8 +58,10 @@
     border: 1px solid black;
     border-radius: 8px;
     padding: 19px;
+    margin-bottom: 30px;
     margin-top: 90px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    
 }
 
 .statement.left {
@@ -94,10 +95,37 @@
     padding-bottom: 10px;
 }
 
-/* Contact button styling */
 .contact-button-landing {
-    margin-top: 5px;
     text-align: center;
+    padding-bottom: 10px;
+    position: relative;
+}
+
+.down-arrow {
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 20px solid white; /* This forms the downward carrot shape */
+    margin-top: 30px; /* Adjust to provide enough spacing from the button */
+    margin-bottom: 10px; /* Extra margin to avoid overlap with the bottom content */
+    margin-left: auto;
+    margin-right: auto;
+    animation: bounce 1.5s infinite;
+}
+
+
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(5px);
+    }
+    60% {
+        transform: translateY(3px);
+    }
 }
 
 .book-consult-button {
@@ -112,6 +140,7 @@
     text-decoration: none;
     transition: background-color 0.3s ease;
     margin-top: 6%;
+    margin-bottom: 20px;
 }
 
 .book-consult-button:hover {
