--- a/dmixon-business/src/styles/BodyContent.css
+++ b/dmixon-business/src/styles/BodyContent.css
@@ -3,4 +3,12 @@
     color: rgb(30, 68, 30);
     display: flex;
     height: 100%;
+    width: 100%;
+}
+
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Prevent horizontal scroll */
 }
